<resources>
    <string name="app_name">Proximity Market</string>
    <string name="async_butto">Start Async Task</string>
    <string name="login_button">Login</string>
    <string name="register_new_account_text"> Not a member yet? Sign up </string>
    <string name="register_new_account_button">now</string>
    <string name="insert_login_credential_text">Insert credential</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="insert_email_text">E-mail</string>
    <string name="register_password">Password</string>
    <string name="confirm_reg_pwd_text">Confirm password</string>
    <string name="insert_your_name_here_to_reg">Insert your name here</string>
    <string name="insert_your_surname_here_to_reg">Insert your surname here</string>
    <string name="insert_your_email_here_to_reg_text">Insert your e-mail here</string>
    <string name="male_radiobutton">Male</string>
    <string name="female_radiobuttonv8">Female</string>
    <string name="button_create_new_account">Create new account</string>
    <string name="agreeTermOfUse_text">I Agree to the Terms and Conditions</string>
    <string name="see_my_ads_btn">See my ads</string>
    <string name="add_ad_btn">Publish your advertisement</string>
    <string name="see_near_ads_btn">Find</string>
    <string name="log_out_btn">Logout</string>
    <string name="title_ad_text">Ad</string>
    <string name="pricea_text">Price</string>
    <string name="insert_description_text">Insert description</string>
    <string name="upload_btn">Upload</string>
    <string name="send_ad_btn">Send</string>
    <string name="inserito_il_text">From</string>
    <string name="da_text">from :</string>
    <string name="where_text">Where :</string>
    <string name="showdescription_text">Show description</string>
    <string name="where_descriprionB_text">Where</string>
    <string name="validfromB_text">Until</string>
    <string name="userfromB_text">Dealer</string>
    <string name="price_adB">Price</string>
    <string name="title_adB_text">Title</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!--  <string name="hello_blank_fragment">Hello blank fragment</string>-->
     <string name="title_activity_see_near_ads">Proximity Market</string>
    <!-- <string name="action_settings">Settings</string>-->
     <string name="section_format">Ad: %1$d</string>
    <string name="take_a_photo">Take a photo</string>

</resources>
