<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.p3.myapp.ActivitiesPackage.AdActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/inserito_il_text"
        android:id="@+id/textView_inserito_il"
        android:layout_below="@+id/textView_title_ad_text"
        android:layout_toRightOf="@+id/textView_title_ad"
        android:layout_toEndOf="@+id/textView_title_ad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/da_text"
        android:id="@+id/textView_from"
        android:layout_below="@+id/textView_pricea"
        android:layout_alignRight="@+id/textView_user_from"
        android:layout_alignEnd="@+id/textView_user_from" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pricea_text"
        android:id="@+id/textView_pricea"
        android:layout_below="@+id/textView_inserito_il"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_ad_text"
        android:id="@+id/textView_title_ad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/where_text"
        android:id="@+id/textView_where"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showdescription_text"
        android:id="@+id/textView_show_description"
        android:layout_below="@+id/textView_where"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/where_descriprionB_text"
        android:id="@+id/textView_where_description"
        android:layout_alignBottom="@+id/textView_where"
        android:layout_alignRight="@+id/textView_title_ad_text"
        android:layout_alignEnd="@+id/textView_title_ad_text"
        android:layout_toRightOf="@+id/textView_where"
        android:layout_toEndOf="@+id/textView_where" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/validfromB_text"
        android:id="@+id/textView_valid_from"
        android:layout_alignTop="@+id/textView_inserito_il"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView_inserito_il"
        android:layout_toEndOf="@+id/textView_inserito_il" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/userfromB_text"
        android:id="@+id/textView_user_from"
        android:layout_alignTop="@+id/textView_from"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/price_adB"
        android:id="@+id/textView_price_ad"
        android:layout_alignTop="@+id/textView_user_from"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_adB_text"
        android:id="@+id/textView_title_ad_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView_title_ad"
        android:layout_toEndOf="@+id/textView_title_ad" />
</RelativeLayout>
