<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivitiesPackage.RegisterNewUser"
    android:backgroundTint="#75fed6"
    android:backgroundTintMode="screen"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/insert_email_text"
        android:id="@+id/textView_insert_email"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_insert_surname_to_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_password"
        android:id="@+id/textView_register_password_"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/textView_insert_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/confirm_reg_pwd_text"
        android:id="@+id/textView_confirm_reg_pwd"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editText_confirm_insert_pwd_to_reg"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView_register_password_"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/insert_your_name_here_to_reg"
        android:id="@+id/editText_insert_name_to_reg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_insert_pwd_to_reg"
        android:layout_alignEnd="@+id/editText_insert_pwd_to_reg"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/insert_your_surname_here_to_reg"
        android:id="@+id/editText_insert_surname_to_reg"
        android:layout_below="@+id/editText_insert_name_to_reg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_insert_pwd_to_reg"
        android:layout_alignEnd="@+id/editText_insert_pwd_to_reg"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/insert_your_email_here_to_reg_text"
        android:id="@+id/editText_email_here_to_reg"
        android:layout_alignBottom="@+id/textView_insert_email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView_insert_email"
        android:layout_toEndOf="@+id/textView_insert_email"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_insert_pwd_to_reg"
        android:layout_alignBottom="@+id/textView_register_password_"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView_register_password_"
        android:layout_alignLeft="@+id/textView_agreeTermsOfUse"
        android:layout_alignStart="@+id/textView_agreeTermsOfUse" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_confirm_insert_pwd_to_reg"
        android:layout_below="@+id/editText_insert_pwd_to_reg"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editText_insert_pwd_to_reg"
        android:layout_alignParentLeft="false" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editText_confirm_insert_pwd_to_reg"
        android:layout_toStartOf="@+id/button_create_new_account"
        android:layout_alignRight="@+id/editText_confirm_insert_pwd_to_reg"
        android:layout_alignEnd="@+id/editText_confirm_insert_pwd_to_reg"
        android:layout_above="@+id/button_create_new_account">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_radiobutton"
            android:id="@+id/male_radiobutton"
            android:checked="true"
            android:layout_gravity="fill" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_radiobuttonv8"
            android:id="@+id/female_radiobutton"
            android:checked="false"
            android:layout_gravity="fill" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_new_account"
        android:id="@+id/button_create_new_account"
        android:layout_above="@+id/textView_agreeTermsOfUse"
        android:background="@color/colorPrimary"
        android:layout_toRightOf="@+id/textView_register_password_"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/agreeTermOfUse_text"
        android:id="@+id/textView_agreeTermsOfUse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_below="@+id/textView_insert_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/editText_insert_pwd_to_reg"
        android:layout_alignRight="@+id/editText_email_here_to_reg"
        android:layout_alignEnd="@+id/editText_email_here_to_reg" />
</RelativeLayout>
