<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".ActivitiesPackage.Login"
    android:background="@drawable/login_sfondo">


    <!--  -->
    <EditText
        android:id="@+id/editText_insertEmailAsUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:inputType="textEmailAddress"
        android:hint="E-mail"
        android:ems="10"
        android:background="@drawable/edittext_top"
        android:drawableLeft="@drawable/emial_icon"
        android:layout_above="@+id/editText_insert_password"
        android:layout_alignLeft="@+id/editText_insert_password"
        android:layout_alignStart="@+id/editText_insert_password"
        android:layout_marginBottom="1dp" />


    <EditText
        android:id="@+id/editText_insert_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:ems="10"
        android:background="@drawable/edittext_bot"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:padding="10dp"
        android:layout_above="@+id/button_login"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/button_login"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:elegantTextHeight="true"
        android:textColor="#ffffff"
        android:background="@color/design_textinput_error_color_light"
        android:layout_marginBottom="78dp"
        android:layout_above="@+id/textView_register_new_account"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register_new_account_text"
        android:id="@+id/textView_register_new_account"
        android:textColor="#e90000"
        android:layout_alignRight="@+id/editText_insert_password"
        android:layout_alignEnd="@+id/editText_insert_password"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_account_button"
        android:id="@+id/button_registerNewAccount"
        android:background="@color/design_textinput_error_color_light"
        android:elegantTextHeight="true"
        android:focusable="false"
        android:nestedScrollingEnabled="false"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/GoOnButton"
        android:layout_alignEnd="@+id/GoOnButton"
        android:layout_alignTop="@+id/textView_register_new_account"
        android:layout_alignLeft="@+id/GoOnButton"
        android:layout_alignStart="@+id/GoOnButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GoOn"
        android:id="@+id/GoOnButton"
        android:layout_alignBaseline="@+id/editText_insert_password"
        android:layout_alignBottom="@+id/editText_insert_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:id="@+id/space10"
        android:layout_above="@+id/editText_insertEmailAsUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/GoOnButton"
        android:layout_alignEnd="@+id/GoOnButton" />

</RelativeLayout>
